Dei continuidade no projeto do restaurante vegano

--- a/Prof-Bruno/PizzariaVegana/index.html
+++ b/Prof-Bruno/PizzariaVegana/index.html
@@ -95,6 +95,141 @@
                 </div>
             </div>
         </section>
+
+        <section class="menu__section">
+            <div class="menu__section-txt">
+                <h2 class="menu__section-title">Menu</h2>
+                <p class="menu__section-paragraph">Veganismo</p>
+            </div>
+
+            <section class="section-coffee">
+                <div class="coffee">
+                    <h2 class="coffee-title">Desayuno</h2>
+                    <div class="coffee-itens">
+                        <img src="img/pexels-chevanon-photography-302900 1.png" alt="">
+                        <div class="coffee-itens-txt">
+                            <div class="coffee-itens-title">
+                                <h3 class="coffee-itens-sub">Cafe con Leche</h3>
+                                <p class="coffee-itens-paragraph">R$150</p>
+                            </div>
+                            <p class="coffee-itens-sub-paragraph">3 criollitos, Mermelada</p>
+                        </div>
+                    </div>
+                    <div class="coffee-itens">
+                        <img src="img/pexels-chevanon-photography-302900 1.png" alt="">
+                        <div class="coffee-itens-txt">
+                            <div class="coffee-itens-title">
+                                <h3 class="coffee-itens-sub">Cafe con Leche</h3>
+                                <p class="coffee-itens-paragraph">R$150</p>
+                            </div>
+                            <p class="coffee-itens-sub-paragraph">3 criollitos, Mermelada</p>
+                        </div>
+                    </div>
+
+                    <div class="coffee-itens">
+                        <img src="img/pexels-chevanon-photography-302900 1.png" alt="">
+                        <div class="coffee-itens-txt">
+                            <div class="coffee-itens-title">
+                                <h3 class="coffee-itens-sub">Cafe con Leche</h3>
+                                <p class="coffee-itens-paragraph">R$150</p>
+                            </div>
+                            <p class="coffee-itens-sub-paragraph">3 criollitos, Mermelada</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="coffee">
+                    <h2 class="coffee-title">Almuerzo</h2>
+                    <div class="coffee-itens">
+                        <img src="img/pexels-chevanon-photography-302900 1.png" alt="">
+                        <div class="coffee-itens-txt">
+                            <div class="coffee-itens-title">
+                                <h3 class="coffee-itens-sub">Cafe con Leche</h3>
+                                <p class="coffee-itens-paragraph">R$150</p>
+                            </div>
+                            <p class="coffee-itens-sub-paragraph">3 criollitos, Mermelada</p>
+                        </div>
+                    </div>
+                    <div class="coffee-itens">
+                        <img src="img/pexels-chevanon-photography-302900 1.png" alt="">
+                        <div class="coffee-itens-txt">
+                            <div class="coffee-itens-title">
+                                <h3 class="coffee-itens-sub">Cafe con Leche</h3>
+                                <p class="coffee-itens-paragraph">R$150</p>
+                            </div>
+                            <p class="coffee-itens-sub-paragraph">3 criollitos, Mermelada</p>
+                        </div>
+                    </div>
+                    <div class="coffee-itens">
+                        <img src="img/pexels-chevanon-photography-302900 1.png" alt="">
+                        <div class="coffee-itens-txt">
+                            <div class="coffee-itens-title">
+                                <h3 class="coffee-itens-sub">Cafe con Leche</h3>
+                                <p class="coffee-itens-paragraph">R$150</p>
+                            </div>
+                            <p class="coffee-itens-sub-paragraph">3 criollitos, Mermelada</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="coffee">
+                    <h2 class="coffee-title">Merienda</h2>
+                    <div class="coffee-itens">
+                        <img src="img/pexels-chevanon-photography-302900 1.png" alt="">
+                        <div class="coffee-itens-txt">
+                            <div class="coffee-itens-title">
+                                <h3 class="coffee-itens-sub">Cafe con Leche</h3>
+                                <p class="coffee-itens-paragraph">R$150</p>
+                            </div>
+                            <p class="coffee-itens-sub-paragraph">3 criollitos, Mermelada</p>
+                        </div>
+                    </div>
+                    <div class="coffee-itens">
+                        <img src="img/pexels-chevanon-photography-302900 1.png" alt="">
+                        <div class="coffee-itens-txt">
+                            <div class="coffee-itens-title">
+                                <h3 class="coffee-itens-sub">Cafe con Leche</h3>
+                                <p class="coffee-itens-paragraph">R$150</p>
+                            </div>
+                            <p class="coffee-itens-sub-paragraph">3 criollitos, Mermelada</p>
+                        </div>
+                    </div>
+                    <div class="coffee-itens">
+                        <img src="img/pexels-chevanon-photography-302900 1.png" alt="">
+                        <div class="coffee-itens-txt">
+                            <div class="coffee-itens-title">
+                                <h3 class="coffee-itens-sub">Cafe con Leche</h3>
+                                <p class="coffee-itens-paragraph">R$150</p>
+                            </div>
+                            <p class="coffee-itens-sub-paragraph">3 criollitos, Mermelada</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+
+        <section class="testemunho">
+            <div class="testemunho__txt">
+                <p class="testemunho-paragraph">Testemunho</p>
+                <h2 class="testemunho-title">Consumidor Feliz</h2>
+            </div>
+            <div class="testemunho__img">
+                <div class="testemunho__img-itens">
+                    <div>
+                        <img src="img/fa_quote-left.png" alt="">
+                    </div>
+                    <div>
+                        <p>Este é um texto de preenchimento simples, existe apenas <br> para preencher e mostrar onde o texto real iria na página <br> quando estivesse completamente pronto.</p>
+                    </div>
+                    <div>
+                        <h3>Matias Sosa</h3>
+                    </div>
+                    <div class="testemunho-ellipse">
+                        <img src="img/Ellipse 2.png" alt="">
+                        <img src="img/Ellipse 1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://kit.fontawesome.com/ebc3101efe.js" crossorigin="anonymous"></script>
