Terminei o projeto Restaurante Vegano

--- a/Prof-Bruno/PizzariaVegana/index.html
+++ b/Prof-Bruno/PizzariaVegana/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <ul class="menu">
+        <ul class="nav-bar">
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Nosotros </a></li>
             <h2 class="title">Resto</h2>
@@ -96,13 +96,13 @@
             </div>
         </section>
 
-        <section class="menu__section">
-            <div class="menu__section-txt">
-                <h2 class="menu__section-title">Menu</h2>
-                <p class="menu__section-paragraph">Veganismo</p>
+        <section class="menu">
+            <div class="menu-txt">
+                <h2 class="menu-title">Menu</h2>
+                <p class="menu-paragraph">Veganismo</p>
             </div>
 
-            <section class="section-coffee">
+            <div class="menu-coffee">
                 <div class="coffee">
                     <h2 class="coffee-title">Desayuno</h2>
                     <div class="coffee-itens">
@@ -204,33 +204,200 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
 
-        <section class="testemunho">
-            <div class="testemunho__txt">
-                <p class="testemunho-paragraph">Testemunho</p>
-                <h2 class="testemunho-title">Consumidor Feliz</h2>
+        <section class="comments">
+            <div class="comments__txt">
+                <p class="comments-paragraph">Testemunho</p>
+                <h2 class="comments-title">Consumidor Feliz</h2>
             </div>
-            <div class="testemunho__img">
-                <div class="testemunho__img-itens">
+            <div class="comments__img">
+                <div class="comments__img-itens">
                     <div>
                         <img src="img/fa_quote-left.png" alt="">
                     </div>
                     <div>
-                        <p>Este é um texto de preenchimento simples, existe apenas <br> para preencher e mostrar onde o texto real iria na página <br> quando estivesse completamente pronto.</p>
+                        <p>Este é um texto de preenchimento simples, existe apenas <br> para preencher e mostrar onde o
+                            texto real iria na página <br> quando estivesse completamente pronto.</p>
                     </div>
                     <div>
                         <h3>Matias Sosa</h3>
                     </div>
-                    <div class="testemunho-ellipse">
+                    <div class="comments-ellipse">
                         <img src="img/Ellipse 2.png" alt="">
                         <img src="img/Ellipse 1.png" alt="">
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="bosses">
+            <div class="bosses__txt">
+                <p class="bosses-paragraph">Expertos</p>
+                <h2 class="bosses-title">Nuestra Cocina</h2>
+            </div>
+            <div class="bosses__person">
+                <div class="bosses-rodrigo">
+                    <div class="about">
+                        <div class="about-txt">
+                            <h2 class="about-txt__title">Rodrigo Russo</h2>
+                            <p class="about-txt__paragraph">Chef</p>
+                        </div>
+                        <div class="social-midia">
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="bosses-maria">
+                    <div class="about">
+                        <div class="about-txt">
+                            <h2 class="about-txt__title">Maria Olivos</h2>
+                            <p class="about-txt__paragraph">Chef</p>
+                        </div>
+                        <div class="social-midia">
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="bosses-fabiano">
+                    <div class="about">
+                        <div class="about-txt">
+                            <h2 class="about-txt__title">Fabiano Caruana</h2>
+                            <p class="about-txt__paragraph">Chef</p>
+                        </div>
+                        <div class="social-midia">
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <section class="reservation">
+            <div class="informs">
+                <p class="reservation-paragraph">Te esperamos</p>
+                <h2 class="reservation-title">Reservation</h2>
+                <form action="">
+                    <div class="form-control">
+                        <div>
+                            <label for=""></label>
+                            <input type="text" name="" id="" placeholder="Nome">
+                        </div>
+                    </div>
+
+                    <div class="form-control">
+                        <div>
+                            <label for=""></label>
+                            <input type="email" name="" id="" placeholder="Email">
+                        </div>
+                    </div>
+
+                    <div class="form-control">
+                        <div>
+                            <label for=""></label>
+                            <input type="tel" name="" id="" placeholder="Telefone">
+                        </div>
+                    </div>
+
+                    <div class="form-control">
+                        <div>
+                            <label for=""></label>
+                            <input class="datatime" type="text" name="" id="" placeholder="Data">
+                        </div>
+                        <div>
+                            <label for=""></label>
+                            <input class="datatime" type="text" name="" id="" placeholder="Hora">
+                        </div>
+                    </div>
+
+                    <div class="form-control">
+                        <div>
+                            <label for=""></label>
+                            <input type="number" name="" id="" placeholder="Quantidade de Pessoas">
+                        </div>
+                    </div>
+
+                    <div class="form-control">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Mensagem"></textarea>
+                    </div>
+
+                    <div class="form-control"><button>Realizar Reserva</button></div>
+                </form>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="footer">
+            <div class="rest">
+                <h2 class="rest-title">Descansar</h2>
+                <p class="rest-paragraph">Este é um texto de preenchimento simples,<br> existe apenas para preencher e mostrar onde <br> o texto real iria na página quando estivesse <br> completamente pronto.</p>
+                <p class="rest-since">2009 - 2022</p>
+                <div class="rest-social-midia">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
+            <div class="schedules">
+                <h2 class="orange">Horarios</h2>
+                <div class="schedules-itens">
+                    <p>Segunda-Feira</p>
+                    <p> 09h00 - 21h00</p>
+                </div>
+            
+                <div class="schedules-itens">
+                    <p>Terça-Feira</p>
+                    <p>09h00 - 21h00</p>
+                </div>
+                <div class="schedules-itens">
+                    <p>Quarta-Feira</p>
+                    <p>09h00 - 21h00</p>
+                </div>
+                <div class="schedules-itens">
+                    <p>Quinta-Feira</p>
+                    <p>09h00 - 21h00</p>
+                </div>
+                <div class="schedules-itens">
+                    <p>Sexta-Feira</p>
+                    <p>09h00 - 21h00</p>
+                </div>
+                <div class="schedules-itens">
+                    <p>Sábado</p>
+                    <p>09h00 - 21h00</p>
+                </div>
+                <div class="schedules-itens">
+                    <p>Domingo</p>
+                    <p>09h00 - 21h00</p>
+                </div>
+                <div class="telephone">
+                    <h2 class="orange">Telefone</h2>
+                    <div class="number">
+                        <i class="fa-solid fa-phone-volume"></i>
+                        <p>+54 351 7608573</p>
+                    </div>
+                </div>
+            </div>
+            <div class="address">
+                <h2 class="orange">Endereço</h2>
+                <div class="address-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>Humberto Primo 771 <br> Córdoba Capital, Bv Centro</p>
+                </div>
+                <div class="maps"></div>
+            </div>
+        </div>
+        <p class="footer-paragraph">2022 - Projetado por Uncoder Web Design</p>
+    </footer>
 
     <script src="https://kit.fontawesome.com/ebc3101efe.js" crossorigin="anonymous"></script>
 </body>
