Hoje realizamos exercicios com grid executando alguns templates para fixação, juntamente com o professor Arley, foi realizado 3 exercicios e 3 desafios

--- a/Prof-Arley/GRID/ex-01/index.html
+++ b/Prof-Arley/GRID/ex-01/index.html
@@ -8,6 +8,7 @@
     <title>Grid Puro</title>
 </head>
 <body>
+    <h2>Grid Tamplate Column / Row</h2>
     <div class="container">
         <div class="item1">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae doloremque veniam nulla beatae expedita sapiente, fuga dignissimos voluptatem adipisci quis?</p>
@@ -21,6 +22,19 @@
         <div class="item6">conteudo 6</div>
         <div class="item7">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae doloremque veniam nulla beatae expedita sapiente, fuga dignissimos voluptatem adipisci quis?</p>
+        </div>
+
+        <div class="item8"></div>
+        <div class="item9"></div>
+        <div class="item10">
+            <p>item10</p>
+            <ul>
+                <li>item10</li>
+                <li>item10</li>
+            </ul>
+        </div>
+        <div class="item11">
+            11
         </div>
     </div>
 </body>
