--- a/Prof-Bruno/pizza_base/index.html
+++ b/Prof-Bruno/pizza_base/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
+    <head>
+    <html lang="pt-br">
     <meta charset="utf-8" />
     <title>Curso de JavaScript</title>
     <link rel="stylesheet" href="style.css" />
